added weight cards

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,6 +121,7 @@
 
 @layer utilities {
   .responsive-grid {
-    @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5;
+    @apply grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4
+            lg:grid-rows-2 xl:grid-rows-2 2xl:grid-rows-2;
   }
 }
