added analysis page and its one card

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,10 +121,10 @@
 
 @layer utilities {
   .responsive-grid {
-    @apply grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4
+    @apply grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3
             lg:grid-rows-2 xl:grid-rows-2 2xl:grid-rows-2;
   }
   .responsive-grid-cols {
-    @apply grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4;
+    @apply grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3;
   }
 }
