fixed date picker

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -110,6 +110,34 @@
   --sidebar-ring: oklch(0.556 0 0);
 }
 
+/* .rdp-root {
+  --rdp-day-height: 2rem;
+  --rdp-day-width: 2rem;
+  --rdp-day_button-height: 2rem;
+  --rdp-day_button-width: 2rem;
+  --rdp-day_button-border-radius: 0.25rem;
+  --rdp-accent-color: var(--primary);
+  --rdp-outside-opacity: 50%;
+}
+
+.dark .rdp-root {
+  --rdp-day-height: 2rem;
+  --rdp-day-width: 2rem;
+  --rdp-day_button-height: 2rem;
+  --rdp-day_button-width: 2rem;
+  --rdp-day_button-border-radius: 0.5rem;
+  --rdp-accent-color: var(--primary);
+  --rdp-outside-opacity: 50%;
+  --rdp-range_middle-background-color: var(--accent);
+  --rdp-range_middle-color: var(--foreground);
+  --rdp-range_start-color: var(--foreground);
+  --rdp-range_start-background: var(--accent);
+  --rdp-range_start-date-background-color: var(--accent);
+  --rdp-range_end-background: var(--accent);
+  --rdp-range_end-color: var(--foreground);
+  --rdp-range_end-date-background-color: var(--accent);
+} */
+
 @layer base {
   * {
     @apply border-border outline-ring/50;
@@ -121,10 +149,10 @@
 
 @layer utilities {
   .responsive-grid {
-    @apply grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3
+    @apply grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4
             lg:grid-rows-2 xl:grid-rows-2 2xl:grid-rows-2;
   }
   .responsive-grid-cols {
-    @apply grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3;
+    @apply grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4 rounded-sm border;
   }
 }
