--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -149,10 +149,14 @@
 
 @layer utilities {
   .responsive-grid {
-    @apply grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-3
+    @apply grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4
             lg:grid-rows-2 xl:grid-rows-2 2xl:grid-rows-2;
   }
   .responsive-grid-cols {
-    @apply grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-3 rounded-xl border;
+    @apply grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4 rounded-xl border;
+  }
+
+  .autofill-grid {
+    @apply grid grid-cols-[repeat(auto-fill,_minmax(20rem,_1fr))] gap-4;
   }
 }
